vbnc/vbnc/tests/Errors/30060-5.vb
Class T
    Const M_Double As Single = "c"
End Class